hard-gists/764746/run.log
=== Docker Run Log for 764746 ===
Started at: Mi 29. Okt 17:14:11 CET 2025

[2025-10-29 17:14:11] START: Running container for 764746
[2025-10-29 17:14:11] SUCCESS: Container 9229c0b4b8f3362f4c79421f1802c29e1dc238ce94a998bde9b2df15c58c84bd started for 764746
=== Container logs for 764746 ===
  File "/snippet.py", line 33
    print k, v
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 764746 ===
[2025-10-29 17:14:13] INFO: Container 9229c0b4b8f3362f4c79421f1802c29e1dc238ce94a998bde9b2df15c58c84bd has stopped
